--- a/news.html
+++ b/news.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
+	<title></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -14,10 +15,9 @@
 	<link rel="stylesheet" href="boot.css">
 
 </head>
-<body style="background-color:#37475A;">
-<div class="container-fluid" style="margin-top: 5%" style="z-index: 1;" style="position: relative;" style="right: 0;"
-style="left: 0;">
-	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #232F3E" style="max-height: 300px">
+<body style="background-color:#37475A;" style="height: 100%" style="min-height: 100%">
+<div class="container-fluid">
+	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #232F3E">
 			<a class="navbar-brand" href="index.html">
    			 <img src="amazon.png" width="150" height="30" alt="" loading="lazy" overflow="auto">
                 <div class="container">
@@ -42,14 +42,14 @@ style="left: 0;">
                                         <ul class="dropdown-menu">
                  							<li><a class="dropdown-item dropdown-toggle" href="#">AMD Series</a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="coming.html">AM4+ Series</a></li>
-                                                    <li><a class="dropdown-item" href="coming.html">AM3+ Series</a></li>
+                                                    <li><a class="dropdown-item" href="#">AM4+ Series</a></li>
+                                                    <li><a class="dropdown-item" href="#">AM3+ Series</a></li>
                                                 </ul>
                                             </li>
                                             <li><a class="dropdown-item dropdown-toggle" href="#">Intel Series</a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="coming.html">LGA 1151</a></li>
-                                                    <li><a class="dropdown-item" href="coming.html">LGA 2066</a></li>
+                                                    <li><a class="dropdown-item" href="#">LGA 1151</a></li>
+                                                    <li><a class="dropdown-item" href="#">LGA 2066</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -60,26 +60,26 @@ style="left: 0;">
                                                 <ul class="dropdown-menu">
                                                     <li><a class="dropdown-item dropdown-toggle" href="#">Radeon RX Series</a>
                                                     	<ul class="dropdown-menu">
-                                                    		<li><a class="dropdown-item" href="coming.html">RX 5000 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">RX 500 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RX 5000 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RX 500 Series</a></li>
                                                     </ul>
                                                     </li>
-                                                    <li><a class="dropdown-item" href="coming.html">Radeon R7/8/9 Series</a></li>
+                                                    <li><a class="dropdown-item" href="#">Radeon R7/8/9 Series</a></li>
                                                 </ul>
                                             </li>
                                             <li><a class="dropdown-item dropdown-toggle" href="#">Nvidia Geforce Series</a>
                                                 <ul class="dropdown-menu">
                                                 	 		<li><a class="dropdown-item dropdown-toggle" href="#">Geforce RTX Series</a>
                                                 		<ul class="dropdown-menu">
-                                                    		<li><a class="dropdown-item" href="coming.html">RTX 20 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">RTX 30 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RTX 20 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RTX 30 Series</a></li>
                                                 		</ul>
                                             		</li>
                                             				<li><a class="dropdown-item dropdown-toggle" href="#">Geforce GTX Series</a>
                                                 		<ul class="dropdown-menu">
-                                                    		<li><a class="dropdown-item" href="coming.html">GTX 900 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">GTX 10 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">GTX 16 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">GTX 900 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">GTX 10 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">GTX 16 Series</a></li>
                                                 		</ul>
                                             		</li>
                                                 </ul>
@@ -93,54 +93,41 @@ style="left: 0;">
                 </div>
               </a> <!-- /container -->
             </nav>
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="right: 0;" style="left: 0;">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="5000 ">
-      <img src="halloweenbanner.jpg" class="d-block w-100"  alt="amdnews">
-      <div class="carousel-caption d-none d-md-block ">
-        <h5>HAPPY HALLOWEEN!</h5>
-        <p>Take a Look at Our Catalogue For Discount.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="amdbanner.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="https://i.ytimg.com/vi/9kHNCtVp7Hk/maxresdefault.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
+<div class="media-background" style="position: static;">
+<ul class="list-unstyled">
+  <li class="media">
+  	<br>
+    <img src="lisanews.jpg" class="mr-3" alt="..." style="max-width: 200px" style="max-height: 200px" >
+	
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Lisa Su Announce New AMD Ryzen Proccesor!</h5>
+      AMD CEO Lisa Su Announce The new Release of AMD Zen 3 Proccesor with 7nm Architecture, It's Believed 
+      To Be Released on November 2020. Lisa Su Promised That The Zen 3 Proccesor will be Compatible With Most AM4 Socket Motherboard and Will Be Available All Around the Globe. <a href="https://www.fudzilla.com/news/pc-hardware/51671-amd-officially-announces-ryzen-5000-series-desktop-cpus">Read More</a>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+  <div class="media-background" style="position: static;">
+  </li>
+  <li class="media my-4">
+    <img src="radeonvs.jpg" class="mr-3" alt="..." style="max-width: 200px" style="max-height: 200px" style="position: fixed">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">AMD Radeon 6800 XT & 6900 XT Beats Nvidia RTX 3090 in a Landslide!</h5>
+      <p>The New AMD Radeon 6900 XT Beats Nvidia RTX 3090 in a Wide Margin, The 6900 XT Graphic Card is Way Cheaper than Its Nvidia Counterpart and is More Powerful. It is Believed By the End of The Year Nvidia will be Announcing RTX 30 Series TI and Super Edition to Fight back AMD 6900 XT. <a href="https://screenrant.com/amd-radeon-rx-6900-xt-vs-nvidia-geforce-rtx-3090/">Read More.</a></p>
+    </div>
+  </li>
 </div>
-</div> 
-<center>
-<a href="shopnow.html" class="snip1582" style="text-decoration: none;">SHOP NOW!!!</a>
-</center>
+<div class="media-background" style="position: static;">
+  <li class="media">
+     <img src="cyberpunkdelay.jpg" class="mr-3" alt="..." style="max-width: 200px" style="max-height: 200px">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Cyberpunk 2077 Delayed Again!</h5>
+      According to Their Twitter Post Which can be Found <a href="https://twitter.com/CyberpunkGame/status/1321128432370176002/photo/1">Here.</a>
+      The Long Awaited Game Cyberpunk 2077 By CD Projekt Red is Delayed yet Again, This Has Been the Third Delay for This Which Supposed to be Released on September, 1 Week Before It's initial Release The Dev Delayed the Game to Early October and then They Delay it to November. Now They Delay it Again to 10 December of 2020, Will we Actually be Able to Play This Game This Year or Will we Get yet Another Delay?.
+    </div>
+  </li>
 </div>
-</div>
-</div>
-<div class="container-footer">
-<div class="footer">
-      <p>© AMAZON 1994 .  All rights reserved.</p>
-      <p>Seattle, Washington, U.S.</p>
-  </div>
-</body>
+</ul>
 
+</body>
 </html>
 
 <script>
