--- a/shopnow.html
+++ b/shopnow.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
+	<title></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -17,7 +18,7 @@
 <body style="background-color:#37475A;">
 <div class="container-fluid" style="margin-top: 5%" style="z-index: 1;" style="position: relative;" style="right: 0;"
 style="left: 0;">
-	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #232F3E" style="max-height: 300px">
+	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #131A22" style="max-height: 300px">
 			<a class="navbar-brand" href="index.html">
    			 <img src="amazon.png" width="150" height="30" alt="" loading="lazy" overflow="auto">
                 <div class="container">
@@ -93,54 +94,80 @@ style="left: 0;">
                 </div>
               </a> <!-- /container -->
             </nav>
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="right: 0;" style="left: 0;">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="5000 ">
-      <img src="halloweenbanner.jpg" class="d-block w-100"  alt="amdnews">
-      <div class="carousel-caption d-none d-md-block ">
-        <h5>HAPPY HALLOWEEN!</h5>
-        <p>Take a Look at Our Catalogue For Discount.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="amdbanner.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="https://i.ytimg.com/vi/9kHNCtVp7Hk/maxresdefault.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div> 
-<center>
-<a href="shopnow.html" class="snip1582" style="text-decoration: none;">SHOP NOW!!!</a>
-</center>
-</div>
-</div>
-</div>
-<div class="container-footer">
-<div class="footer">
-      <p>© AMAZON 1994 .  All rights reserved.</p>
-      <p>Seattle, Washington, U.S.</p>
-  </div>
-</body>
 
+<div class="container-fluid">
+	 <div class="d-flex justify-content-center">	
+    	<div class="row">
+    			<div class="col-md-4">
+    			 <figure class="snip1567">
+     
+				      <img src="am4.jpg" width="400" height="300">
+				        <figcaption>
+				          <h3>AMD Socket AM4 Proccesor.</h3>
+				          <p>Coming Soon!</p>
+				        </figcaption>
+				        <div class="hover"></div><i class="ion-android-add"></i>
+				        <a href="coming.html"></a>			     
+			    </figure>
+				</div>
+				<div class="col-md-4">
+				 <figure class="snip1567">
+     				<img src="1151.jpg" width="400" height="200">
+				        <figcaption>
+				          <h3>Intel Socket 1151 Proccesor.</h3>
+				          <p>Now Available!</p>
+				        </figcaption>
+				        <div class="hover"></div><i class="ion-android-add"></i>
+				        <a href="coming.html"></a>	     
+    			</figure>
+				</div>
+				<div class="col-md-4">
+				 <figure class="snip1567">
+       			 	<img src="nvidia.jpg" width="400" height="200">
+				        <figcaption>
+				          <h3>NVIDIA Graphic Card Collection.</h3>
+				          <p>Coming Soon!</p>
+				        </figcaption>
+				        <div class="hover"></div><i class="ion-android-add"></i>
+				        <a href="coming.html"></a>		     
+    		</figure>
+    		</div>
+    		<div class="col-md-4">
+    			 <figure class="snip1567">
+				      <img src="vishera.jpg" width="400" height="200">
+				        <figcaption>
+				          <h3>AMD Socket AM3+ Proccesor.</h3>
+				          <p>Coming Soon.</p>
+				        </figcaption>
+				        <div class="hover"></div><i class="ion-android-add"></i>
+				        <a href="coming.html"></a>			     
+			    </figure>
+				</div>
+				<div class="col-md-4">
+    			 <figure class="snip1567">
+				      <img src="2066.jpg" width="400" height="200">
+				        <figcaption>
+				          <h3>Intel Socket 2066 Proccesor.</h3>
+				          <p>Coming Soon!</p>
+				        </figcaption>
+				        <div class="hover"></div><i class="ion-android-add"></i>
+				        <a href="coming.html"></a>			     
+			    </figure>
+				</div>
+				<div class="col-md-4">
+    			 <figure class="snip1567">
+				      <img src="radeon.jpg" width="400" height="200">
+				        <figcaption>
+				          <h3>AMD Radeon Graphic Card Collection.</h3>
+				          <p>Coming Soon</p>
+				        </figcaption>
+				        <div class="hover"></div><i class="ion-android-add"></i>
+				        <a href="coming.html"></a>			     
+			    </figure>
+				</div>
+    	</div>
+
+</body>
 </html>
 
 <script>
@@ -169,4 +196,12 @@ style="left: 0;">
         return false;
     } );
 } );
+
+
+
+$(".hover").mouseleave(
+  function () {
+    $(this).removeClass("hover");
+  }
+);
 </script>
