--- a/coming.html
+++ b/coming.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
+	<title></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -14,10 +15,10 @@
 	<link rel="stylesheet" href="boot.css">
 
 </head>
-<body style="background-color:#37475A;">
+<body style="background-color:#37475A;" style="height: 100%;">
 <div class="container-fluid" style="margin-top: 5%" style="z-index: 1;" style="position: relative;" style="right: 0;"
 style="left: 0;">
-	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #232F3E" style="max-height: 300px">
+	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #131A22" style="max-height: 300px">
 			<a class="navbar-brand" href="index.html">
    			 <img src="amazon.png" width="150" height="30" alt="" loading="lazy" overflow="auto">
                 <div class="container">
@@ -42,14 +43,14 @@ style="left: 0;">
                                         <ul class="dropdown-menu">
                  							<li><a class="dropdown-item dropdown-toggle" href="#">AMD Series</a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="coming.html">AM4+ Series</a></li>
-                                                    <li><a class="dropdown-item" href="coming.html">AM3+ Series</a></li>
+                                                    <li><a class="dropdown-item" href="#">AM4+ Series</a></li>
+                                                    <li><a class="dropdown-item" href="#">AM3+ Series</a></li>
                                                 </ul>
                                             </li>
                                             <li><a class="dropdown-item dropdown-toggle" href="#">Intel Series</a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item" href="coming.html">LGA 1151</a></li>
-                                                    <li><a class="dropdown-item" href="coming.html">LGA 2066</a></li>
+                                                    <li><a class="dropdown-item" href="#">LGA 1151</a></li>
+                                                    <li><a class="dropdown-item" href="#">LGA 2066</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -60,26 +61,26 @@ style="left: 0;">
                                                 <ul class="dropdown-menu">
                                                     <li><a class="dropdown-item dropdown-toggle" href="#">Radeon RX Series</a>
                                                     	<ul class="dropdown-menu">
-                                                    		<li><a class="dropdown-item" href="coming.html">RX 5000 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">RX 500 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RX 5000 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RX 500 Series</a></li>
                                                     </ul>
                                                     </li>
-                                                    <li><a class="dropdown-item" href="coming.html">Radeon R7/8/9 Series</a></li>
+                                                    <li><a class="dropdown-item" href="#">Radeon R7/8/9 Series</a></li>
                                                 </ul>
                                             </li>
                                             <li><a class="dropdown-item dropdown-toggle" href="#">Nvidia Geforce Series</a>
                                                 <ul class="dropdown-menu">
                                                 	 		<li><a class="dropdown-item dropdown-toggle" href="#">Geforce RTX Series</a>
                                                 		<ul class="dropdown-menu">
-                                                    		<li><a class="dropdown-item" href="coming.html">RTX 20 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">RTX 30 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RTX 20 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">RTX 30 Series</a></li>
                                                 		</ul>
                                             		</li>
                                             				<li><a class="dropdown-item dropdown-toggle" href="#">Geforce GTX Series</a>
                                                 		<ul class="dropdown-menu">
-                                                    		<li><a class="dropdown-item" href="coming.html">GTX 900 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">GTX 10 Series</a></li>
-                                                    		<li><a class="dropdown-item" href="coming.html">GTX 16 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">GTX 900 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">GTX 10 Series</a></li>
+                                                    		<li><a class="dropdown-item" href="#">GTX 16 Series</a></li>
                                                 		</ul>
                                             		</li>
                                                 </ul>
@@ -93,80 +94,12 @@ style="left: 0;">
                 </div>
               </a> <!-- /container -->
             </nav>
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="right: 0;" style="left: 0;">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="5000 ">
-      <img src="halloweenbanner.jpg" class="d-block w-100"  alt="amdnews">
-      <div class="carousel-caption d-none d-md-block ">
-        <h5>HAPPY HALLOWEEN!</h5>
-        <p>Take a Look at Our Catalogue For Discount.</p>
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="amdbanner.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="https://i.ytimg.com/vi/9kHNCtVp7Hk/maxresdefault.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div> 
-<center>
-<a href="shopnow.html" class="snip1582" style="text-decoration: none;">SHOP NOW!!!</a>
-</center>
-</div>
-</div>
-</div>
-<div class="container-footer">
-<div class="footer">
-      <p>© AMAZON 1994 .  All rights reserved.</p>
-      <p>Seattle, Washington, U.S.</p>
-  </div>
+            <div class="container" style="margin: 10%;">
+    <h1 style="opacity: 0.4;">Page Currently Not Available, Sorry for The Inconvenience.</h1>
+    		</div>
+            <center>
+           <a href="index.html" class="snip1582" style="text-decoration: none;">Back To Home Page.</a>
+            </center>
+
 </body>
-
 </html>
-
-<script>
-	$( document ).ready( function () {
-    $( '.dropdown-menu a.dropdown-toggle' ).on( 'click', function ( e ) {
-        var $el = $( this );
-        $el.toggleClass('active-dropdown');
-        var $parent = $( this ).offsetParent( ".dropdown-menu" );
-        if ( !$( this ).next().hasClass( 'show' ) ) {
-            $( this ).parents( '.dropdown-menu' ).first().find( '.show' ).removeClass( "show" );
-        }
-        var $subMenu = $( this ).next( ".dropdown-menu" );
-        $subMenu.toggleClass( 'show' );
-        
-        $( this ).parent( "li" ).toggleClass( 'show' );
-
-        $( this ).parents( 'li.nav-item.dropdown.show' ).on( 'hidden.bs.dropdown', function ( e ) {
-            $( '.dropdown-menu .show' ).removeClass( "show" );
-            $el.removeClass('active-dropdown');
-        } );
-        
-         if ( !$parent.parent().hasClass( 'navbar-nav' ) ) {
-            $el.next().css( { "top": $el[0].offsetTop, "left": $parent.outerWidth() - 4 } );
-        }
-
-        return false;
-    } );
-} );
-</script>
