--- a/featured.html
+++ b/featured.html
@@ -1,6 +1,7 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
+	<title></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -15,9 +16,8 @@
 
 </head>
 <body style="background-color:#37475A;">
-<div class="container-fluid" style="margin-top: 5%" style="z-index: 1;" style="position: relative;" style="right: 0;"
-style="left: 0;">
-	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #232F3E" style="max-height: 300px">
+		<div class="container-fluid">
+	<nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #232F3E">
 			<a class="navbar-brand" href="index.html">
    			 <img src="amazon.png" width="150" height="30" alt="" loading="lazy" overflow="auto">
                 <div class="container">
@@ -93,54 +93,48 @@ style="left: 0;">
                 </div>
               </a> <!-- /container -->
             </nav>
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" style="right: 0;" style="left: 0;">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-interval="5000 ">
-      <img src="halloweenbanner.jpg" class="d-block w-100"  alt="amdnews">
-      <div class="carousel-caption d-none d-md-block ">
-        <h5>HAPPY HALLOWEEN!</h5>
-        <p>Take a Look at Our Catalogue For Discount.</p>
-      </div>
+<div class="container" style="margin: 10%;">
+    <h1> HOTTEST PRE-ORDER</h1>
+    <div class="d-flex justify-content-center">	
+    	<div class="row">
+    			<div class="col-md-4">
+    			<figure class="snip1583">
+  					<img src="rx6900.png" alt="sample68" />
+  					<div class="icons"><a><i class="ion-android-cart"></i></a><a><i class="ion-android-star"></i></a><a><i class="ion-android-share-alt"></i></a></div>
+ 					<figcaption>
+    				<h3>Radeon RX 6900 XT</h3>
+				    <div class="price">$999.99</div>
+				    <a href="coming.html" class="snip1562" style="text-decoration: none;">Coming Soon!</a>
+				  </figcaption>
+				</figure>
+				</div>
+				<div class="col-md-4">
+				<figure class="snip1583">
+  					<img src="r75700.jpg" alt="sample68" />
+  					<div class="icons"><a><i class="ion-android-cart"></i></a><a><i class="ion-android-star"></i></a><a><i class="ion-android-share-alt"></i></a></div>
+ 					<figcaption>
+    				<h3>AMD Ryzen 7 5800X</h3>
+				    <div class="price">$449.99</div>
+				    <a href="coming.html" class="snip1562" style="text-decoration: none;">Coming Soon!</a>
+				  </figcaption>
+				</figure>
+				</div>
+				<div class="col-md-4">
+				<figure class="snip1583">
+  					<img src="aorus.png" alt="sample68" />
+  					<div class="icons"><a><i class="ion-android-cart"></i></a><a><i class="ion-android-star"></i></a><a><i class="ion-android-share-alt"></i></a></div>
+ 					<figcaption>
+    				<h3>Gigabyte Aorus Master X570</h3>
+				    <div class="price">$359.99</div>
+				    <a href="coming.html" class="snip1562" style="text-decoration: none;">Coming Soon!</a>
+				  </figcaption>
+				</figure>
+    		</div>
+    	</div>	
     </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="amdbanner.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-    <div class="carousel-item" data-interval="2000">
-      <img src="https://i.ytimg.com/vi/9kHNCtVp7Hk/maxresdefault.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div> 
-<center>
-<a href="shopnow.html" class="snip1582" style="text-decoration: none;">SHOP NOW!!!</a>
-</center>
-</div>
-</div>
-</div>
-<div class="container-footer">
-<div class="footer">
-      <p>© AMAZON 1994 .  All rights reserved.</p>
-      <p>Seattle, Washington, U.S.</p>
-  </div>
-</body>
 
+<
+</body>
 </html>
 
 <script>
@@ -169,4 +163,8 @@ style="left: 0;">
         return false;
     } );
 } );
+
+
+
+
 </script>
