--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ if (opt == "addition") {
     var z = x - y;
     } else if (opt == "multipli") {
     var z = x * y;
-    } else if (pil == "division") {
+    } else if (opt == "division") {
     var z = x / y;
     }
 
