--- a/index.html
+++ b/index.html
@@ -1,51 +1,137 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+	.navbar-nav > li{
+		  margin-right:30px;
+	}
+
+	#tablehead > h3{
+		margin-top: 10px;
+		color: white;
+	}
+	</style>
+
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body>
-	<form name="calc">
-		<input type="text" id="bil1" name="bil1">
-		<label for="operasi"></label>
-		  <select name="operator">
-		    <option value="addition">+</option>
-		    <option value="deduction">-</option>
-		    <option value="multipli">X</option>
-		    <option value="division">÷</option>
-		  </select>
-		<input type="text" id="bil2" name="bil2">
-		<input type="button" value="=" onClick="calculate()" />
-		<input type="text" name="result" disabled="true" /></p>
-
-		<input type="button" value="CLEAR" onClick="resetForm()" />
-	</form>
+<body style="background-color: #48494B;">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+    	<img src="covid.png" width="160" height="42" alt="" loading="lazy" overflow="auto">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="countries.html">Countries Data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="faq.html" >FAQ</a>
+        </li>
+      </ul>
+      <!-- top right of navbar -->
+    </div>
+  </div>
+</nav>
+	<div class="container" id="tablehead">
+		<h3 class="text-center">Total Case Globally</h3>
+		<table class="table table-dark table-striped">
+  <thead>
+    <tr>
+      <th>Confirmed Cases</th>
+      <th>Confirmed Death</th>
+      <th>Confirmed Recovery</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr id="data">
+   
+    </tr>
+  </tbody>
+</table>
+	</div>
+	<div class="container" id="tablehead">
+		<h3 class="text-center">New Case Daily</h3>
+		<table class="table table-dark table-striped">
+  <thead>
+    <tr>
+      <th>New Daily Cases</th>
+      <th >New Daily Death</th>
+      <th>New Daily Recovery</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr id="data2">
+   
+    </tr>
+  </tbody>
+</table>
+<br>
+<button onclick="refresh()" class="btn btn-secondary btn-block">Refresh Current Data</button>
+<br>
+<div class="container">
+<div class="row justify-content-between">
+<a href="#" class="btn btn-secondary btn-block col-5">See Other Countries</a>
+<br>OR
+<a href="#" class="btn btn-secondary btn-block col-5">Frequently Asked Question</a>
+</div>
+</div>
 </body>
-</html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script>
-function calculate(){
 
-var myForm = document.calc;
-var x=eval(myForm.bil1.value);
-var y=eval(myForm.bil2.value);
-var opt= myForm.operator.value;
+		init ()
+		init2 ()
 
-if (opt == "addition") {
-    var z = x + y;
-    }else if (opt == "deduction") {
-    var z = x - y;
-    } else if (opt == "multipli") {
-    var z = x * y;
-    } else if (opt == "division") {
-    var z = x / y;
-    }
+		function init(){
+			var url = "https://api.covid19api.com/summary"
+			var data = ''
+			$.get(url, function(data){
+				console.log(data)
 
- myForm.result.value = z;
- myForm.x.value = "";
- myForm.y.value = "";
-}
+				data = `
+				<td style="color: #ff5c33;">${data.Global.TotalConfirmed}</td>
+				<td style="color: #7575a3;">${data.Global.TotalDeaths}</td>
+				<td style="color: #33ff33;">${data.Global.TotalRecovered}</td>
+				`
+				$("#data").html(data)
+			})
+		}
 
-function resetForm(){
-document.calc.reset();
-}
+		function init2(){
+			var url = "https://api.covid19api.com/summary"
+			var data = ''
+			$.get(url, function(data){
 
+				data = `
+				<td style="color: #ff5c33;">${data.Global.NewConfirmed}</td>
+				<td style="color: #7575a3;">${data.Global.NewDeaths}</td>
+				<td style="color: #33ff33;">${data.Global.NewRecovered}</td>
+				`
+				$("#data2").html(data)
+			})
+		}
 
-	</script>
+		function refresh(){
+			clear()
+			init ()
+			init2()
+		}
+		function clear(){
+			$("#data").empty()
+			$("#data2").empty()
+		}
+
+</script>
+</html>
