--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 <br>
 <div class="container">
 <div class="row justify-content-between">
-<a href="#" class="btn btn-secondary btn-block col-5">See Other Countries</a>
+<a href="countries.html" class="btn btn-secondary btn-block col-5">See Other Countries</a>
 <br>OR
-<a href="#" class="btn btn-secondary btn-block col-5">Frequently Asked Question</a>
+<a href="faq.html" class="btn btn-secondary btn-block col-5">Frequently Asked Question</a>
 </div>
 </div>
 </body>
